@@ -1,3 +1,7 @@
+2006-05-08  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_GrampsDbBase.py (get_default_person): Use proper
+	way of getting person from the handle.
+
 2006-05-08  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_GrampsDbBase.py: get_default_handle()
 	* src/DisplayState.py: use get_default_handle, fix race condition 
